# cratchit

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  package.json
integration/: package-lock.json  package.json  test.js
src/: Account.js  AccountsChart.js  accounts.rs  currency.rs  lib.rs
test/: AccountsChart.spec.js
test/fixtures/: ChartOfAccounts.json
tests/: test_accounts.rs  test_currency.rs
wasm/: Cargo.toml  index.js  package-lock.json
wasm/src/: lib.rs
www/: .gitignore  index.js  package-lock.json  package.json
