[package]
name = "cratchit"
version = "0.0.1"
authors = ["Scott Johnson <jaywir3@gmail.com>"]
description = "A package for managing accounting data"
license = "MPL-2.0"
readme = "README.md"
keywords = ["accounting", "cratchit", "money", "finance"]
# build = "build.rs"

[badges]
travis-ci = { repository = "jwir3/cratchit" }

[workspace]
members = [".", "wasm"]

[profile.release]
# Enable this option for better time and size profiling.
# debug = true

# Optimize for small code size, rather than speed.
opt-level = "s"

# Always enable link-time optimizations to shrink binary sizes.
lto = true

[dependencies]
json = "0.11.13"

[dev-dependencies]
galvanic-test = "0.1.4"
