[package]
authors = ["Scott Johnson <jaywir3@gmail.com>"]
categories = ["wasm", "accounting"]
description = "A WASM library for managing accounting data"
license = "MPL-2.0"
name = "cratchit_wasm"
readme = "./README.md"
repository = "https://github.com/jwir3/cratchit"
version = "0.0.1"

[badges]
travis-ci = { repository = "jwir3/cratchit" }

[lib]
crate-type = [
  # Build a cdylib to make a `.wasm` library.
  "cdylib",
]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2.15"
cratchit = { default-features = false, path = ".." }
# lazy_static = "1.0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.0", optional = true }

[features]
default-features = ["console_error_panic_hook", "wee_alloc"]
